fixed overflow-y

--- a/css/about.css
+++ b/css/about.css
@@ -39,6 +39,7 @@ h1 {
 
 .about-text-box-inner {
     height: 100%;
+    max-height: 852px;
     width: 100%;
     background-color: var(--light);
     padding: 1rem;
@@ -50,6 +51,7 @@ h1 {
     flex-direction: column;
     gap: 1rem;
     overflow-y: scroll;
+    max-height: 828px;
 }
 
 @media (min-width: 1000px) {
@@ -74,12 +76,8 @@ h1 {
         max-height: 868px;
         width: 50%;
         padding: .5rem;
-        overflow: hidden;
     }
 
-    .about-text-box-inner {
-        overflow-y: scroll;
-    }
 
     .about-box-article {
         height: 100%;
